<resources>
    <string name="app_name">Dance it</string>
    <string name="add_workshop">צור סדנא</string>
    <string name="dateInput">תאריך</string>
    <string name="hourInput">שעה</string>
    <string name="startTimeInput">שעת התחלה</string>
    <string name="endTimeInput">שעת סיום</string>
    <string name="classLevelInput">רמת קושי</string>
    <string name="classGenreInput">סגנון</string>
    <string name="placeInput">מיקום</string>
    <string name="maxParticipantInput">מספר מקומות</string>
    <string name="userId">תעודת זהות</string>
    <string name="password">סיסמא</string>
    <string name="profile">פרופיל</string>
    <string name="favorites">מועדפים</string>
    <string name="logout">התנתק</string>
    <string name="home">דף הבית</string>
    <string name="username">שם</string>
    <string name="phone">טלפון</string>
    <string name="instegramLink">קישור לאינסטגרם</string>
    <string name="facebookLink">קישור לפייסבוק</string>
    <string name="edit">ערוך</string>
    <string name="save">שמור</string>
    <string name="delete">מחק</string>
    <string name="register">רשום אותי</string>
    <string name="unregister">בטל הרשמה</string>
    <string name="enterWaitingList">היכנס לרשימת המתנה</string>
    <string name="leaveWaitingList">צא מרשימת ההמתנה</string>
    <string name="participantsList">רשימת משתתפים</string>
    <string name="alert_workshopSaved">הסדנא נשמרה בהצלחה</string>
    <string name="alert_finishUpdate">העדכון בוצע בהצלחה</string>
    <string name="notification_userGotPlaceInWorkshop_title">איזה כיף לך!</string>
    <string name="notification_userGotPlaceInWorkshop_content">התפנה לך מקום בסדנא:)</string>
    <string name="authFailed">ההתחברות נכשלה</string>
    <string name="noWorkshopsForDate">אין סדנאות מתוכננות ליום זה</string>
    <string name="form_invalidTimes">זמן סיום אינו תקין</string>
    <string-array name="class_levels">
        <item>רמת קושי</item>
        <item>מתחילים</item>
        <item>בינוניים</item>
        <item>מתקדמים</item>
    </string-array>
    <string-array name="class_genres">
        <item>סגנון</item>
        <item>היפ-הופ</item>
        <item>דאנסהול</item>
        <item>גז פאנק</item>
        <item>בלט</item>
        <item>גז</item>
        <item>מודרני</item>
    </string-array>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>
